bk_ida/gccida/c1/record_giv
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6076:1: error: unknown type name 'induction_1'
induction_1 *v, 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6084:1: error: must use 'enum' tag to refer to type 'g_types'
g_types type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6090:4: error: expected ';' after expression
rtx v16; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6090:5: error: use of undeclared identifier 'v16'
rtx v16; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6091:4: error: expected ';' after expression
rtx v17; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6091:5: error: use of undeclared identifier 'v17'
rtx v17; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6092:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6092:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6094:4: error: expected ';' after expression
rtx v20; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6094:5: error: use of undeclared identifier 'v20'
rtx v20; // r10 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6118:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6118:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6128:1: error: use of undeclared identifier 'v16'
v16 = ( rtx)insn[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6129:1: error: use of undeclared identifier 'v17'
v17 = insn; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6130:17: error: use of undeclared identifier 'v16'
if ( *( _WORD *)v16 != 47 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6131:35: error: expected expression
v16 = single_set_2( insn, *( rtx *)&insn[2]); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6131:1: error: use of undeclared identifier 'v16'
v16 = single_set_2( insn, *( rtx *)&insn[2]); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6135:1: error: use of undeclared identifier 'v17'
v17 = insn; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/loop.c:6136:1: error: use of undeclared identifier 'v16'
v16 = 0LL; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_giv/src/obj/loop.o] Error 1
